--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Devops Practice</title>
 </head>
 <body>
-    <h1> Devops Practice
+    <h1> Devops Practice </h1>  
+    <h4> Topics covered till now are</h4>   
 </body>
 </html>
