--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Devops Practice</title>
 </head>
-<body>
-    <h1> Devops Practice </h1>  
-    <h4> Topics covered till now are</h4>   
+<body class="container">
+    <h1 class="header"> Devops Practice </h1>  
+    <h4 class="topics"> Topics covered till now are</h4>   
 </body>
 </html>
