updated with list

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 <body class="container">
 <h1 class="header"> Devops Practice </h1>  
-    <h4 class="topics"> Topics covered till now are</h4>   
+    <h4 class="topics"> Topics covered till now are</h4>
+    <ul>
+	    <li> Linux </li>
+	    <li> Bash Scripting </li>
+	    <li> Git/Github </li>
+    </ul>
 </body>
 </html>
