--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Devops Practice</title>
 </head>
-<body class="container">
+<body>
 <h1 class="header"> Devops Practice </h1>  
     <h4 class="topics"> Topics covered till now are</h4>
     <ul>
